pihole/pihole-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
  labels:
    name: pihole
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
