pihole/pihole-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-service
  namespace: pihole
  labels:
    app: pihole
    role: dns
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: 53
  - name: dns-tcp
    protocol: TCP
    port: 53
    targetPort: 53
